<resources>
    <string name="app_name">Tomalan</string>
    <string name="file_name">Challenges.JSON</string>
    <string name="text_explanation">Insert the player\'\s name (20 letters max) and press "add" to add a new player. Do it as many times as players you want to add. Press "ready" when you finished adding all the players</string>
    <string name="text_explanation_addChallenge">Insert the description of the new challenge (100 letters max) and it\'\s value. Do it as many times as challenges you want to add. Press "ready" when you finished adding all the challenges </string>
    <string name="boton_addPlayer">Add</string>
    <string name="addPlayers_doneButton">Ready</string>
    <string name="input_name">Name</string>
    <string name="input_challenge">Description</string>
    <string name="text_challengeValue">Value:</string>
    <string name="input_value">0</string>
    <string name="text_value">Drinks:</string>
    <string name="blank">""</string>
    <string name="boton_done">Done</string>
    <string name="boton_not_done">Not done</string>
    <string name="text_rounds_amount">Please enter the amount of rounds you want to play</string>
    <string name="input_round_amount">3</string>
    <string name="button_round_amounts">OK</string>
    <string name="input_0">The amount of rounds must be higher than 0</string>
    <string name="playing_skip_challenge"> Skip </string>
    <string name="player_turn">%1$s\'\s turn</string>
    <string name="welcome">Welcome!\n Before start playing, add as many players as you want.\n If you want, you can add personalized challenges too.\n Press start when you are ready</string>
    <string name="ini_addPlayerButton">Add\nPlayers</string>
    <string name="ini_addChallengeButton">Add\nChallenges</string>
    <string name="ini_startPlayingButton">Let\'\s Start!</string>
    <string name="no_players">You must add at least 2 players</string>
    <string name="large_name">The name is too large</string>
    <string name="large_description">The description is too large</string>
    <string name="incomplete_info">At least one of the fields is blank or contain a non valid character</string>
    <string name="winner_finishButton">Finish</string>
    <string name="winner_restartButton">Restart</string>
    <string name="winner_is">The winner is: %1$s </string>
    <string name="text_instructionsTitle">Instructions</string>
    <string name="text_instructions">The main idea of this game is to get drunk. This game is about challenges. Every challenge has a value of drinks, so when you complete it, you drink that amount of drinks.</string>
    <string name="text_instructionsEnd">Enjoy your party!</string>
    <string name="same_name">There is a player with that name already</string>
</resources>