<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitialActivity">

    <Button
        android:id="@+id/initial_addPlayerButton"
        android:layout_width="121dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/default_button_animator"
        android:fontFamily="@font/droid_serif"
        android:onClick="goAddPlayer"
        android:text="@string/ini_addPlayerButton"
        app:layout_constraintBottom_toTopOf="@+id/initial_startPlayingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/initial_addChallengeButton"
        app:layout_constraintTop_toBottomOf="@+id/initial_welcomeText"
        app:layout_constraintVertical_bias="0.602" />

    <Button
        android:id="@+id/initial_addChallengeButton"
        android:layout_width="121dp"
        android:layout_height="60dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/default_button_animator"
        android:fontFamily="@font/droid_serif"
        android:onClick="goAddChallenge"
        android:text="@string/ini_addChallengeButton"
        app:layout_constraintBottom_toTopOf="@+id/initial_startPlayingButton"
        app:layout_constraintEnd_toStartOf="@+id/initial_addPlayerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initial_welcomeText"
        app:layout_constraintVertical_bias="0.602" />

    <TextView
        android:id="@+id/initial_welcomeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/initial_startPlayingButton"
        android:layout_width="123dp"
        android:layout_height="88dp"
        android:layout_marginTop="284dp"
        android:layout_marginBottom="157dp"
        android:background="@drawable/default_button_animator"
        android:fontFamily="@font/droid_serif"
        android:onClick="start"
        android:text="@string/ini_startPlayingButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initial_welcomeText" />

    <Button
        android:id="@+id/button4"
        android:layout_width="56dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/ic_menu_help"
        android:onClick="goInstructions"
        android:text="@string/blank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>